--- a/src/lib/i18n/id.json
+++ b/src/lib/i18n/id.json
@@ -107,5 +107,82 @@
   },
   "languageToggle": {
     "label": "Ganti Bahasa"
+  },
+  "stories": {
+    "smong-selamat-dari-lautan": {
+      "title": "Smong: Kearifan Lokal yang Selamat dari Lautan",
+      "summary": "Kisah tentang bagaimana tradisi lisan 'Smong' di Pulau Simeulue menyelamatkan ribuan nyawa saat tsunami 2004, sebuah bukti kekuatan kearifan lokal dalam mitigasi bencana.",
+      "fullText": "Di Pulau Simeulue, jauh sebelum sistem peringatan dini modern ada, leluhur kami telah mewariskan sebuah syair, sebuah nyanyian bernama 'Smong'. Syair ini bukan sekadar lantunan, melainkan sebuah panduan hidup. 'Enggel mon sao suru, linon bak, mae oek suruik...' yang artinya 'Jika gempa kuat diikuti surutnya air laut, segeralah lari ke tempat tinggi'. Saat gempa dan tsunami dahsyat melanda Aceh pada tahun 2004, ingatan akan Smong inilah yang mendorong kami semua berlari ke bukit, menjauhi pantai. Dari puluhan ribu penduduk, hanya sedikit yang menjadi korban. Smong adalah bukti bahwa alam memberi tanda, dan leluhur kami telah mengajari kami cara membacanya. Ini adalah cerita tentang bagaimana pengetahuan yang diwariskan dari generasi ke generasi menjadi penyelamat kami."
+    },
+    "hutan-bakau-penjaga-pantai": {
+      "title": "Hutan Bakau, Sang Penjaga Pantai",
+      "summary": "Cerita inspiratif dari komunitas pesisir di Aceh Jaya yang bekerja sama menanam kembali hutan bakau untuk melindungi desa mereka dari abrasi dan badai.",
+      "fullText": "Dulu, pantai di desa kami terus menerus terkikis. Setiap kali badai datang, kami selalu was-was. Rumah-rumah di dekat pantai perlahan hancur. Lalu, kami teringat cerita orang tua dulu, bahwa hutan bakau adalah benteng alami kami. Bersama-sama, para pemuda dan orang tua, kami mulai menanam kembali bibit bakau di sepanjang pesisir. Awalnya sulit, banyak yang gagal. Tapi kami tidak menyerah. Sekarang, setelah bertahun-tahun, hutan bakau itu telah tumbuh lebat. Akarnya yang kokoh mencengkeram tanah, menahan laju ombak. Desa kami kini lebih aman. Anak-anak bisa bermain di pantai tanpa rasa takut. Hutan bakau tidak hanya melindungi kami, tapi juga menjadi rumah bagi ikan dan kepiting, memberikan kami sumber penghidupan tambahan."
+    },
+    "dapur-umum-perdamaian": {
+      "title": "Dapur Umum Perdamaian",
+      "summary": "Bagaimana sebuah dapur umum yang didirikan pasca-konflik menjadi ruang untuk merajut kembali tali persaudaraan dan membangun perdamaian melalui makanan.",
+      "fullText": "Setelah konflik berakhir, masih ada banyak luka dan ketidakpercayaan di antara kami. Sulit untuk memulai kembali. Lalu, beberapa dari kami, para ibu, berpikir: semua orang butuh makan, dan makanan bisa menyatukan. Kami mendirikan sebuah dapur umum sederhana. Siapapun boleh datang untuk makan, dan siapapun boleh membantu memasak. Di sinilah keajaiban terjadi. Sambil memotong sayur dan mengaduk gulai, kami mulai berbicara. Kami berbagi cerita, tawa, dan air mata. Dinding-dinding yang dulu memisahkan kami perlahan runtuh. Dapur ini menjadi lebih dari sekadar tempat makan; ia menjadi ruang rekonsiliasi. Kami belajar bahwa perdamaian bisa dimulai dari hal yang paling sederhana: sepiring nasi hangat dan hati yang terbuka."
+    },
+    "lumbung-padi-komunal": {
+      "title": "Lumbung Padi Komunal: Gotong Royong Hadapi Paceklik",
+      "summary": "Inisiatif masyarakat Gayo dalam membangun lumbung padi komunal sebagai jaring pengaman sosial untuk memastikan tidak ada satu pun warga yang kelaparan saat musim paceklik.",
+      "fullText": "Di dataran tinggi Gayo, cuaca tak selalu bisa ditebak. Kadang panen melimpah, kadang gagal total. Untuk menghadapi ini, kami menghidupkan kembali tradisi 'lumbung bersama'. Setiap keluarga yang panennya berlebih akan menyisihkan sebagian hasilnya untuk disimpan di lumbung komunal. Saat ada keluarga yang mengalami kesulitan atau gagal panen, mereka bisa mengambil dari lumbung ini. Tidak ada bunga, tidak ada catatan utang. Semuanya didasari oleh semangat gotong royong dan kepedulian. Lumbung ini adalah simbol persatuan kami. Ia mengajarkan kami bahwa dengan berbagi, kita semua menjadi lebih kuat. Kami mungkin tidak kaya secara materi, tapi kami kaya dalam persaudaraan."
+    },
+    "bah-tangse-sungai-murka": {
+      "title": "Bah Tangse: Ketika Sungai Murka",
+      "summary": "Kesaksian mendalam tentang banjir bandang dahsyat di Tangse pada 2011, sebuah tragedi yang disebabkan oleh perambahan hutan dan menjadi pelajaran pahit tentang pentingnya menjaga alam.",
+      "fullText": "Malam itu, 10 Maret 2011, langit seakan pecah di atas Tangse. Hujan yang turun bukan lagi sekadar hujan, melainkan seperti air yang ditumpahkan dari langit tanpa henti. Kami yang tinggal di sepanjang Krueng Tangse sudah biasa dengan air sungai yang naik, tapi malam itu berbeda. Sekitar tengah malam, kami mendengar suara gemuruh yang bukan berasal dari guntur. Suaranya semakin keras, seperti gunung yang runtuh. Beberapa dari kami yang penasaran mencoba melihat keluar. Yang kami lihat adalah pemandangan mengerikan: air sungai meluap dengan liar, warnanya hitam pekat, dan membawa serta puluhan pohon gelondongan raksasa yang saling berbenturan. Itu bukan banjir biasa, itu adalah 'Bah' – air bah yang murka.\\n\\nKepala desa berteriak melalui pengeras suara masjid, 'Air naik! Selamatkan diri! Lari ke tempat tinggi!' Listrik padam, membuat suasana semakin panik dan mencekam. Dalam gelap gulita, kami hanya bisa mengandalkan naluri. Suara benturan kayu-kayu raksasa yang menghantam jembatan dan rumah-rumah terdengar begitu dekat. Rumah-rumah panggung yang terbuat dari kayu pun tak berdaya, tercabut dari pondasinya dan hanyut terseret arus. Kami berlari sekuat tenaga ke perbukitan, ke tempat yang lebih tinggi, hanya membawa pakaian di badan. Dari atas bukit, kami melihat desa kami dilahap oleh air bah yang ganas. Paginya, saat air mulai surut, yang tersisa hanyalah lumpur tebal dan puing-puing. Jembatan utama putus, puluhan rumah hilang, dan sawah kami berubah menjadi lautan lumpur. Kami sadar, ini bukan hanya bencana alam. Ini adalah akibat dari keserakahan. Hutan di hulu yang seharusnya menjadi penyangga telah gundul oleh penebangan liar. Sungai tidak lagi memiliki penahan. Bah Tangse menjadi pelajaran paling pahit bagi kami, bahwa merusak alam sama dengan menghancurkan diri sendiri. Sejak saat itu, kami bersumpah untuk menjaga hutan kami, menanam kembali pohon-pohon, sebagai warisan agar tragedi serupa tidak terulang lagi."
+    },
+    "api-di-bukit-barisan": {
+      "title": "Api di Bukit Barisan",
+      "summary": "Kisah perjuangan Masyarakat Peduli Api di dataran tinggi Gayo dalam mencegah dan memadamkan kebakaran hutan, melindungi ekosistem Leuser yang berharga.",
+      "fullText": "Setiap musim kemarau, hati kami selalu was-was. Hutan pinus di sekitar kami ini indah, tapi juga sangat rentan terbakar. Sedikit saja percikan api, bisa menjadi bencana besar. Kami membentuk kelompok 'Masyarakat Peduli Api'. Kami berpatroli secara sukarela, membuat sekat bakar, dan yang terpenting, memberikan penyuluhan kepada warga agar tidak membuka lahan dengan cara membakar. Ini bukan pekerjaan pemerintah, ini adalah tanggung jawab kami bersama. Hutan ini adalah sumber air kami, rumah bagi satwa liar, dan warisan untuk anak cucu kami. Memadamkan api sebelum membesar adalah cara kami membangun perdamaian dengan alam."
+    },
+    "kopi-gayo-aroma-perdamaian": {
+      "title": "Kopi Gayo: Aroma Perdamaian",
+      "summary": "Bagaimana kebun kopi di Bener Meriah yang sempat ditinggalkan karena konflik, kini menjadi motor penggerak ekonomi dan simbol harapan baru bagi masyarakat.",
+      "fullText": "Dulu di masa konflik, banyak dari kami yang terpaksa meninggalkan kebun kopi. Kebun-kebun itu telantar, ditumbuhi semak belukar. Setelah damai, kami kembali. Memulainya lagi dari nol sangat berat. Tapi, kami melihat harapan pada biji-biji kopi ini. Kami bekerja keras, belajar teknik menanam yang lebih baik, dan membangun koperasi bersama. Perlahan tapi pasti, kopi Gayo mulai dikenal dunia. Aroma kopi yang kami olah setiap pagi bukan hanya aroma minuman, tapi juga aroma perdamaian dan kerja keras. Kebun kopi ini telah menyatukan kami kembali, memberikan pekerjaan, dan memungkinkan kami menyekolahkan anak-anak. Kopi telah menyembuhkan luka kami."
+    },
+    "pemuda-penjaga-adat": {
+      "title": "Pemuda Penjaga Adat",
+      "summary": "Sekelompok pemuda di Pidie menghidupkan kembali tari Seudati sebagai cara untuk menjauhkan anak muda dari kekerasan dan memperkuat identitas budaya pasca-konflik.",
+      "fullText": "Setelah perdamaian, banyak anak muda yang kehilangan arah. Energi mereka yang besar terkadang tersalurkan ke hal-hal negatif. Kami, beberapa pemuda yang lebih tua, merasa harus melakukan sesuatu. Kami memutuskan untuk menghidupkan kembali sanggar tari Seudati. Tarian ini bukan sekadar gerakan, tapi juga mengajarkan disiplin, kerja sama tim, dan berisi syair-syair nasihat. Awalnya tidak mudah menarik minat mereka. Tapi dengan kesabaran, sanggar kami mulai ramai. Energi mereka kini tersalurkan untuk melestarikan budaya. Melalui tarian, kami membangun jembatan antar desa dan menciptakan ruang yang aman bagi pemuda untuk berekspresi secara positif."
+    },
+    "perempuan-penganyam-harapan": {
+      "title": "Perempuan Penganyam Harapan",
+      "summary": "Kisah para janda korban tsunami yang bangkit dari keterpurukan dengan membentuk kelompok kerajinan anyaman, menciptakan kemandirian ekonomi dan ruang penyembuhan.",
+      "fullText": "Tsunami merenggut suami dan rumah kami. Kami ditinggalkan dengan duka dan ketidakpastian. Untuk bertahan hidup, kami mulai berkumpul dan melakukan apa yang kami bisa: menganyam. Kami menggunakan daun pandan yang tumbuh melimpah di sekitar kami. Sambil menganyam, kami berbagi cerita, saling menguatkan. Anyaman ini bukan sekadar tikar atau tas, ini adalah terapi bagi kami. Perlahan, produk kami mulai dikenal. Pesanan datang, dan kami mendapatkan penghasilan sendiri. Kami tidak lagi hanya korban, kami adalah penyintas yang berdaya. Kelompok ini menjadi keluarga baru kami, tempat kami menenun kembali harapan untuk masa depan."
+    },
+    "arsitektur-rumah-panggung": {
+      "title": "Arsitektur Rumah Panggung: Belajar dari Nenek Moyang",
+      "summary": "Menggali kembali kearifan arsitektur tradisional Aceh, Rumoh Aceh, sebagai inspirasi untuk membangun rumah yang lebih tahan gempa dan adaptif terhadap lingkungan.",
+      "fullText": "Saat gempa dan tsunami menghancurkan begitu banyak bangunan modern, kami melihat banyak Rumoh Aceh (rumah tradisional Aceh) yang masih berdiri kokoh. Ini membuka mata kami. Arsitektur nenek moyang kita ternyata luar biasa. Rumah panggung dengan konstruksi kayu yang fleksibel mampu meredam guncangan gempa. Kolong di bawah rumah tidak hanya berfungsi sebagai ruang serbaguna, tetapi juga memberikan jalan bagi air jika terjadi banjir atau genangan. Kami mulai mengadvokasikan dan membangun kembali rumah dengan mengadaptasi prinsip-prinsip Rumoh Aceh. Ini bukan tentang kembali ke masa lalu, tapi mengambil pelajaran terbaik dari masa lalu untuk membangun masa depan yang lebih aman."
+    },
+    "seni-melawan-trauma": {
+      "title": "Seni Melawan Trauma",
+      "summary": "Bagaimana para seniman muda di Banda Aceh menggunakan mural dan seni jalanan untuk mengubah dinding-dinding bekas tsunami menjadi kanvas harapan dan ingatan kolektif.",
+      "fullText": "Banda Aceh pasca-tsunami penuh dengan dinding-dinding bisu yang menjadi saksi tragedi. Suasananya terasa berat. Sebagai seniman, kami merasa terpanggil untuk melakukan sesuatu. Kami mulai melukis mural di dinding-dinding publik. Bukan untuk menghapus ingatan, tapi untuk memberinya warna baru. Kami melukis tentang harapan, ketahanan, kebersamaan, dan keindahan Aceh. Proses melukis bersama ini menjadi terapi bagi kami dan juga masyarakat. Anak-anak ikut bergabung. Dinding yang dulu suram kini menjadi galeri terbuka yang menceritakan kisah kebangkitan kami. Seni menjadi cara kami menyembuhkan luka kota dan jiwa kami."
+    },
+    "nelayan-dan-tanda-alam": {
+      "title": "Kearifan Nelayan dan Tanda-tanda Alam",
+      "summary": "Kisah nelayan tradisional di Banda Aceh yang mengandalkan pengetahuan turun-temurun tentang rasi bintang, angin, dan perilaku ikan untuk melaut dengan aman.",
+      "fullText": "Kami para nelayan tidak punya GPS canggih. Kompas kami adalah langit dan laut itu sendiri. Ayah saya mengajari saya cara membaca rasi bintang Orion, atau 'Bintang Tiga' seperti yang kami sebut, untuk mengetahui arah pulang. Kami tahu kapan waktu ikan berkumpul hanya dengan melihat warna air dan jenis burung yang terbang di atasnya. Jika lumba-lumba berenang mendekati pantai, itu pertanda cuaca akan buruk. Pengetahuan ini tidak ada di buku, ini diwariskan dari ayah ke anak, dari satu generasi nelayan ke generasi berikutnya. Ini adalah ilmu kehidupan yang membuat kami bisa bersahabat dengan lautan."
+    },
+    "sumur-tua-sumber-kehidupan": {
+      "title": "Sumur Tua, Sumber Kehidupan Saat Kekeringan",
+      "summary": "Kisah tentang bagaimana sebuah sumur tua warisan leluhur menjadi satu-satunya sumber air yang bertahan saat desa dilanda kekeringan panjang.",
+      "fullText": "Musim kemarau tahun itu sangat panjang. Sungai mengering, sumur-sumur modern kami pun ikut kering. Kami mulai putus asa. Lalu seorang tetua desa teringat akan sebuah sumur tua yang sudah lama tidak digunakan di pinggir hutan. Sumur itu dibangun dengan cincin batu dan ditutupi oleh pohon besar. Dengan ragu, kami membersihkannya. Ajaib, di dasarnya masih ada air yang jernih dan tidak pernah kering! Ternyata, leluhur kami membangun sumur itu tepat di atas mata air yang besar. Sumur tua itu menyelamatkan desa kami. Kami belajar bahwa teknologi modern tidak selalu lebih baik. Ada kearifan dalam peninggalan masa lalu yang harus kami jaga."
+    },
+    "ilmu-falak-di-pesantren": {
+      "title": "Ilmu Falak di Dayah: Navigasi Lautan dan Langit",
+      "summary": "Mengungkap bagaimana pesantren (dayah) di Aceh tidak hanya mengajarkan ilmu agama, tetapi juga ilmu falak (astronomi) yang digunakan nelayan untuk navigasi.",
+      "fullText": "Banyak yang mengira dayah hanya tempat belajar Al-Quran. Tapi sejak dulu, kami juga mempelajari Ilmu Falak. Kami menghitung posisi bintang untuk menentukan awal bulan puasa, dan juga arah kiblat. Ternyata, ilmu yang sama juga sangat bermanfaat bagi para nelayan di pesisir. Para santri yang pulang ke kampungnya sering menjadi rujukan. Mereka bisa memberitahu kapan pasang surut tertinggi, atau di mana posisi bintang utara. Ada hubungan erat antara langit dan laut, antara ilmu agama dan ilmu kehidupan. Di sini, kami belajar bahwa semua ilmu berasal dari Tuhan dan bisa dimanfaatkan untuk kebaikan bersama, baik di darat maupun di lautan."
+    },
+    "pasar-sebagai-ruang-sosial": {
+      "title": "Pasar Pagi: Lebih dari Sekadar Jual Beli",
+      "summary": "Pasar tradisional bukan hanya tempat transaksi ekonomi, tetapi juga jantung sosial komunitas, tempat informasi disebarkan dan ikatan sosial diperkuat.",
+      "fullText": "Saya sudah berdagang di pasar ini sejak muda. Bagi kami, pasar bukan hanya tempat mencari uang. Di sinilah kami bertemu teman, bertukar kabar, dan berbagi cerita. Jika ada kabar tentang akan ada bantuan, atau lowongan kerja, informasi itu menyebar cepat di pasar. Bahkan saat ada isu-isu yang meresahkan, kami bisa saling menenangkan di sini. Pasar adalah barometer sosial. Dari obrolan di warung kopi pasar, kita bisa tahu apa yang sedang dirasakan masyarakat. Menjaga pasar tradisional tetap hidup sama dengan menjaga denyut nadi komunitas kami."
+    }
   }
 }
